pagina person adc

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <title>Vite + React</title>
+  <link rel="shortcut icon" href="src/assets/sass/img/imdb.png" type="image/x-icon">
+  <title>The IMDB Colection</title>
 </head>
 
 <body>
